argocd/apps/mealie/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mealie
  name: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: mealie
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - marcus-server
      containers:
        - image: ghcr.io/mealie-recipes/mealie:v2.7.1@sha256:708e9ffb843bafdcebf46ee35bb45d1b003518e8c204483a1da039b4076ef980
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: '1000m'
              memory: 2Gi
            requests:
              cpu: 300m
              memory: 350Mi
          name: mealie
          ports:
            - containerPort: 9000
              protocol: TCP
          volumeMounts:
            - mountPath: /app/data
              name: data
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 9000
          #   initialDelaySeconds: 30
          #   periodSeconds: 30
          #   timeoutSeconds: 5
          #   failureThreshold: 10
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 9000
          #   initialDelaySeconds: 60
          #   periodSeconds: 15
          #   timeoutSeconds: 5
          #   failureThreshold: 5
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
---
