argocd/apps/mealie/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: mealie-app
  name: mealie-httproute
  namespace: mealie
spec:
  hostnames:
  - mealie.yanello.net
  rules:
  - backendRefs:
    - name: mealie
      namespace: mealie
      port: 9000
      weight: 0
